[package]
name = "gilgamesh"
version = "0.0.1"
authors = ["Andrea Orru <andrea@orru.io>"]
edition = "2018"

[lib]
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = ">=3.0.0-beta.1, <4.0"
colored = ">=1.9, <2.0"
getset = ">=0.1.1, <0.2"
lazy_static = ">=1.4, <2.0"
maplit = ">=1.0.2, <2.0"
paste = ">=0.1.12, <0.2"
rexpect = ">=0.4, <0.5"
rustyline = ">=6.1.2, <7.0"
strip-ansi-escapes = ">=0.1, <0.2"