[package]
name = "gilgamesh"
version = "0.0.1"
authors = ["Andrea Orru <andrea@orru.io>"]
edition = "2018"

[lib]
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = ">=0.4"
clap = ">=3.0.0-beta.1"
colored = ">=1.9"
enum-map = ">=0.6.2"
getset = ">=0.1.1"
lazy_static = ">=1.4"
maplit = ">=1.0.2"
paste = ">=0.1.12"
rexpect = ">=0.4"
rustyline = ">=6.1.2"
strip-ansi-escapes = ">=0.1"
strum = ">=0.18.0"
strum_macros = ">=0.18.0"