[package]
name = "gilgamesh"
version = "0.1.0"
authors = ["Andrea Orru <andrea@orru.io>"]
edition = "2018"

[lib]
doctest = false
test = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bimap = { version = ">=0.4", features = ["serde"] }
clap = ">=3.0.0-beta.1"
colored = ">=1.9"
derive-new = ">=0.5"
enum-map = ">=0.6.2"
getset = ">=0.1.1"
inflections = ">=1.1.1"
lazy_static = ">=1.4"
maplit = ">=1.0.2"
paste = ">=0.1.12"
regex = ">=1.3.9"
rustyline = { git = "https://github.com/AndreaOrru/rustyline", rev = "9e3afca" }
rustyline-derive = ">=0.3.1"
serde = { version = ">=1.0.114", features = ["derive"] }
serde_json = ">=1.0.56"
shell-words = ">=1.0.0"
shellexpand = ">=2.0.0"
strip-ansi-escapes = ">=0.1"
strum = ">=0.18.0"
strum_macros = ">=0.18.0"